--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
 <html> 
 
     <head>
+            <title>Meine erste Seite</title>
+
 
     </head>
 
     <body>
-hallo ich probiere das nochmal aus
+Hallo Welt
 
     </body>
 
