--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
 
     <head>
+        <meta charset="utf-8">
             <title>Meine erste Seite</title>
 
 
@@ -9,6 +10,7 @@
 
     <body>
 Hallo Welt
+Grüße
 
     </body>
 
