--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
     <head>
         <meta charset="utf-8">
-            <title>Meine erste Seite</title>
-
+        <title>Meine erste Seite</title>
+        <link href="design.css" rel="stylesheet" type="text/css">
 
     </head>
 
