Zurück auf Vorletzte Version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         orqighpoqihgfüqorghüqoaghfüoadghü aoihp odvhßarueihpodihvßaürweg <br> hqßüihfáqer´güiq0regh´q0ergh
         üaoihgüoqirghüqorgh+qihgáirghq oüerghiádsfvhüoqarghioüahißüasghq aeoigh+´0a</p>
 
-        <img src="katze.jpg" alt="Katze starrt" title="Kater Perter Foto Herr Mustermann" />
+        <img src="katze.jpg" alt="starrende Katze" title="Katze aus der Nachbarschaft Max Mustermann" />
 
         <p>öajghfqßeughpoqagh´qreghqßüaeruighqßhporghq
         ioghfpqoaighüqoighqüorhgqghrqßehgqoirghqßoghqrüoewghiqüighqüoghiqr´üewghq <a href="http://www.berlin.de" target="_blank"             >Berlin</a>
