--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Meine erste Seite</title>
-        <link href="design.css" rel="stylesheet" type="text/css">
+        <link href="css/design.css" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -16,7 +16,7 @@
         orqighpoqihgfüqorghüqoaghfüoadghü aoihp odvhßarueihpodihvßaürweg <br> hqßüihfáqer´güiq0regh´q0ergh
         üaoihgüoqirghüqorgh+qihgáirghq oüerghiádsfvhüoqarghioüahißüasghq aeoigh+´0a</p>
 
-        <img src="katze.jpg" alt="starrende Katze" title="Katze aus der Nachbarschaft Max Mustermann" />
+        <img src="img/katze.jpg" alt="starrende Katze" title="Katze aus der Nachbarschaft Max Mustermann" />
 
         <p>öajghfqßeughpoqagh´qreghqßüaeruighqßhporghq
         ioghfpqoaighüqoighqüorhgqghrqßehgqoirghqßoghqrüoewghiqüighqüoghiqr´üewghq <a href="http://www.berlin.de" target="_blank"             >Berlin</a>
@@ -35,6 +35,14 @@
         <li>Bahn</li>
         <li>Bahn</li>
     </ul>
+
+
+    <h1>Headline</h1>
+
+    <div>Ich bin ein Div</div>
+
+    <div class="color kiste rand"> Ich bin der zweite Div</div>
+
     </body>
 
 </html>
