--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div>Ich bin ein Div</div>
 
-    <div class="color kiste rand"> Ich bin der zweite Div</div>
+    <div class="color kiste bkgr1"> Ich bin der zweite Div</div>
 
     </body>
 
