--- a/css/index.html
+++ b/css/index.html
@@ -12,14 +12,14 @@
         <h1>Hallo Welt</h1>
         <h2>Grüße</h2>
         <p>öajghfqßeughpoqagh´qreghqßüaeruighqßhporghq
-        ioghfpqoaighüqoighqüorhgqghrqßehgqoirghqßoghqrüoewghiqüighqüoghiqr´üewghq <a href="http://www.berlin.de" target="_blank">Berlin</a>
+        ioghfpqoaighüqoighqüorhgqghrqßehgqoirghqßoghqrüoewghiqüighqüoghiqr´üewghq <a href="http://www.berlin.de" target="_blank"             >Berlin</a>
         orqighpoqihgfüqorghüqoaghfüoadghü aoihp odvhßarueihpodihvßaürweg <br> hqßüihfáqer´güiq0regh´q0ergh
         üaoihgüoqirghüqorgh+qihgáirghq oüerghiádsfvhüoqarghioüahißüasghq aeoigh+´0a</p>
 
         <img src="img/katze.jpg" alt="starrende Katze" title="Katze aus der Nachbarschaft Max Mustermann" />
 
         <p>öajghfqßeughpoqagh´qreghqßüaeruighqßhporghq
-        ioghfpqoaighüqoighqüorhgqghrqßehgqoirghqßoghqrüoewghiqüighqüoghiqr´üewghq <a href="http://www.berlin.de" target="_blank">Berlin</a>
+        ioghfpqoaighüqoighqüorhgqghrqßehgqoirghqßoghqrüoewghiqüighqüoghiqr´üewghq <a href="http://www.berlin.de" target="_blank"             >Berlin</a>
         orqighpoqihgfüqorghüqoaghfüoadghü aoihp odvhßarueihpodihvßaürweg <br> hqßüihfáqer´güiq0regh´q0ergh
         üaoihgüoqirghüqorgh+qihgáirghq oüerghiádsfvhüoqarghioüahißüasghq aeoigh+´0a</p>
     
@@ -41,28 +41,8 @@
 
     <div>Ich bin ein Div</div>
 
-    <div class="color kiste"> Ich bin der zweite Div</div> <br> <br>
+    <div class="color kiste"> Ich bin der zweite Div</div>
 
     </body>
-
-
-
-
-    <body1>
-
-
-
-        <section>Ich bin ein Block</section>
-        <section>Ich bin ein Block</section>
-        <section>Ich bin ein Block</section>
-
-
-
-    </body1>
-
-    <br> <br> <br>
-
-
-
 
 </html>
