--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
 
 
-        <section>Ich bin ein Block</section>
-        <section>Ich bin ein Block</section>
-        <section>Ich bin ein Block</section>
+        <section class="kopf frame">Ich bin ein Block</section>
+        <section class="content frame">Ich bin ein Block</section>
+        <section class="footer frame">Ich bin ein Block</section>
 
 
 
