--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <title>Meine erste Seite</title>
         <link href="css/design.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap">
+    
 
     </head>
 
@@ -55,7 +57,7 @@
 
         <section class="kopf frame">
           
-            <section class="center">
+            <section class="center relative">
                 <img class="logo" src="img/logo.jpg" />
             </section>
 
