--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html> 
 
     <head>
@@ -10,7 +10,7 @@
 
     </head>
 
-    1.1 - 3 Komplett
+
     <body>
      
 
