--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
 
     <body>
-     
+
+        <section class="aufteilung">
+            Top
+        </section>
+
+        <section class="unten">
+
+        </section>
 
     </body>
 
