--- a/start.html
+++ b/start.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Meine erste Seite</title>
-        <link href="css/design.css" rel="stylesheet" type="text/css">
+        <link href="css/start.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap">
     
 
